--- a/Wordle/MainPage.xaml
+++ b/Wordle/MainPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Wordle.MainPage">
+             x:Class="Wordle.MainPage"
+             Title="Wordle">
 
     <ScrollView>
         <VerticalStackLayout
@@ -32,5 +33,4 @@
                 HorizontalOptions="Fill" />
         </VerticalStackLayout>
     </ScrollView>
-
 </ContentPage>
