Adding method to only allow letters

--- a/Wordle/MainPage.xaml
+++ b/Wordle/MainPage.xaml
@@ -44,104 +44,104 @@
 
             <!-- Row 1 -->
             <Border Style="{StaticResource borderStyle}" Grid.Row="0" Grid.Column="0">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="0" Grid.Column="1">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="0" Grid.Column="2">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="0" Grid.Column="3">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="0" Grid.Column="4">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
 
             <!-- Row 2 -->
             <Border Style="{StaticResource borderStyle}" Grid.Row="1" Grid.Column="0">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="1" Grid.Column="1">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="1" Grid.Column="2">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="1" Grid.Column="3">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="1" Grid.Column="4">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
 
             <!-- Row 3 -->
             <Border Style="{StaticResource borderStyle}" Grid.Row="2" Grid.Column="0">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="2" Grid.Column="1">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="2" Grid.Column="2">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="2" Grid.Column="3">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="2" Grid.Column="4">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
 
             <!-- Row 4 -->
             <Border Style="{StaticResource borderStyle}" Grid.Row="3" Grid.Column="0">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="3" Grid.Column="1">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="3" Grid.Column="2">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="3" Grid.Column="3">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="3" Grid.Column="4">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
 
             <!-- Row 5 -->
             <Border Style="{StaticResource borderStyle}" Grid.Row="4" Grid.Column="0">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="4" Grid.Column="1">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="4" Grid.Column="2">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="4" Grid.Column="3">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="4" Grid.Column="4">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
 
             <!-- Row 6 -->
             <Border Style="{StaticResource borderStyle}" Grid.Row="5" Grid.Column="0">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="5" Grid.Column="1">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="5" Grid.Column="2">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="5" Grid.Column="3">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="5" Grid.Column="4">
-                <Entry Style="{StaticResource gridEntry}"/>
+                <Entry Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged"/>
             </Border>
         </Grid>
 
