--- a/Wordle/MainPage.xaml
+++ b/Wordle/MainPage.xaml
@@ -145,6 +145,8 @@
             </Border>
         </Grid>
 
+        <Label x:Name="test" TextColor="Black"/> <!-- TEMPORARY ONLY FOR TESTING -->
+
         <Button Style="{StaticResource submitBtn}" Text="Submit Guess" HorizontalOptions="FillAndExpand"/>
     </StackLayout>
 </ContentPage>
