--- a/Wordle/MainPage.xaml
+++ b/Wordle/MainPage.xaml
@@ -13,7 +13,6 @@
             <Setter Property="FontAttributes" Value="Bold"/>
             <Setter Property="HorizontalTextAlignment" Value="Center"/>
             <Setter Property="TextTransform" Value="Uppercase"/>
-            <Setter Property="BackgroundColor" Value="White"/>
             <Setter Property="Keyboard" Value="Text"/>
             <Setter Property="WidthRequest" Value="80"/>
             <Setter Property="HeightRequest" Value="80"/>
@@ -44,104 +43,104 @@
 
             <!-- Row 1 -->
             <Border Style="{StaticResource borderStyle}" Grid.Row="0" Grid.Column="0">
-                <Entry x:Name="Row1Col1" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row1Col1" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row1Col1Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="0" Grid.Column="1">
-                <Entry x:Name="Row1Col2" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row1Col2" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row1Col2Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="0" Grid.Column="2">
-                <Entry x:Name="Row1Col3" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row1Col3" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row1Col3Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="0" Grid.Column="3">
-                <Entry x:Name="Row1Col4" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row1Col4" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row1Col4Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="0" Grid.Column="4">
-                <Entry x:Name="Row1Col5" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row1Col5" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row1Col5Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
 
             <!-- Row 2 -->
             <Border Style="{StaticResource borderStyle}" Grid.Row="1" Grid.Column="0">
-                <Entry x:Name="Row2Col1" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row2Col1" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row2Col1Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="1" Grid.Column="1">
-                <Entry x:Name="Row2Col2" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row2Col2" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row2Col2Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="1" Grid.Column="2">
-                <Entry x:Name="Row2Col3" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row2Col3" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row2Col3Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="1" Grid.Column="3">
-                <Entry x:Name="Row2Col4" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row2Col4" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row2Col4Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="1" Grid.Column="4">
-                <Entry x:Name="Row2Col5" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row2Col5" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row2Col5Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
 
             <!-- Row 3 -->
             <Border Style="{StaticResource borderStyle}" Grid.Row="2" Grid.Column="0">
-                <Entry x:Name="Row3Col1" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row3Col1" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row3Col1Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="2" Grid.Column="1">
-                <Entry x:Name="Row3Col2" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row3Col2" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row3Col2Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="2" Grid.Column="2">
-                <Entry x:Name="Row3Col3" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row3Col3" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row3Col3Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="2" Grid.Column="3">
-                <Entry x:Name="Row3Col4" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row3Col4" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row3Col4Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="2" Grid.Column="4">
-                <Entry x:Name="Row3Col5" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row3Col5" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row3Col5Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
 
             <!-- Row 4 -->
             <Border Style="{StaticResource borderStyle}" Grid.Row="3" Grid.Column="0">
-                <Entry x:Name="Row4Col1" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row4Col1" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row4Col1Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="3" Grid.Column="1">
-                <Entry x:Name="Row4Col2" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row4Col2" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row4Col2Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="3" Grid.Column="2">
-                <Entry x:Name="Row4Col3" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row4Col3" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row4Col3Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="3" Grid.Column="3">
-                <Entry x:Name="Row4Col4" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row4Col4" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row4Col4Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="3" Grid.Column="4">
-                <Entry x:Name="Row4Col5" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row4Col5" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row4Col5Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
 
             <!-- Row 5 -->
             <Border Style="{StaticResource borderStyle}" Grid.Row="4" Grid.Column="0">
-                <Entry x:Name="Row5Col1" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row5Col1" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row5Col1Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="4" Grid.Column="1">
-                <Entry x:Name="Row5Col2" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row5Col2" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row5Col2Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="4" Grid.Column="2">
-                <Entry x:Name="Row5Col3" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row5Col3" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row5Col3Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="4" Grid.Column="3">
-                <Entry x:Name="Row5Col4" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row5Col4" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row5Col4Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="4" Grid.Column="4">
-                <Entry x:Name="Row5Col5" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row5Col5" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row5Col5Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
 
             <!-- Row 6 -->
             <Border Style="{StaticResource borderStyle}" Grid.Row="5" Grid.Column="0">
-                <Entry x:Name="Row6Col1" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row6Col1" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row6Col1Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="5" Grid.Column="1">
-                <Entry x:Name="Row6Col2" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row6Col2" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row6Col2Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="5" Grid.Column="2">
-                <Entry x:Name="Row6Col3" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row6Col3" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row6Col3Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="5" Grid.Column="3">
-                <Entry x:Name="Row6Col4" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row6Col4" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row6Col4Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
             <Border Style="{StaticResource borderStyle}" Grid.Row="5" Grid.Column="4">
-                <Entry x:Name="Row6Col5" Style="{StaticResource gridEntry}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
+                <Entry x:Name="Row6Col5" Style="{StaticResource gridEntry}" BackgroundColor="{Binding Row6Col5Colour}" TextChanged="Entry_TextChanged" IsEnabled="False"/>
             </Border>
         </Grid>
 
